# superstring

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/core/: char8_t.h  patch.cc  patch.h  point.cc  point.h  range.cc  range.h  regex.cc  regex.h  text-buffer.cc  text-buffer.h  text-slice.cc  text-slice.h  text.cc  text.h
